Align client relay with Continue 2.1.0 remote tools
Preserve client workspace context and tool-call streams while removing legacy gateway artifacts.

Co-authored-by: Cursor <cursoragent@cursor.com>